# TAPL-Haskell

./: .gitignore  README.md
arith/: AST.hs  CHANGELOG.md  Eval.hs  Main.hs  Parser.y  arith.cabal  lexer.x
iso-rec-stlc/: AST.hs  CHANGELOG.md  Check.hs  Eval.hs  Lexer.x  Main.hs  Parser.y  README.md  iso-rec-stlc.cabal
iso-rec-stlc/tests/: alphaeq.stlc  andb.stlc  fixpoint.stlc  list.stlc  mutype.stlc  nat.stlc  notb.stlc  omega.stlc  unfold.stlc  unit.stlc
mini-extended-stlc/: AST.hs  CHANGELOG.md  Check.hs  Eval.hs  Lexer.x  Main.hs  Parser.y  README.md  mini-extended-stlc.cabal
mini-extended-stlc/tests/: basic.stlc  bool.stlc  simple.stlc
simply-typed-lambda-calc/: AST.hs  CHANGELOG.md  Checker.hs  Eval.hs  Hypothetical.hs  Macros.hs  Main.hs  Parser.y  README.md  lexer.x  simply-typed-lambda-calc.cabal
stlc-extended/: AST.hs  CHANGELOG.md  README.md  stlc-extended.cabal
untyped-lambda-calc/: AST.hs  CHANGELOG.md  Eval.hs  Lexer.hs  Macros.hs  Main.hs  Parser.y  README.md  untyped-lambda-calc.cabal
