cabal-version:       >=1.10
-- Initial package description 'simply-typed-lambda-calc.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                simply-typed-lambda-calc
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              rnp39
maintainer:          rnp39@cornell.edu
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable simply-typed-lambda-calc
  main-is:             Main.hs
  other-modules: AST, Checker, Hypothetical, Eval
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14, containers, mtl, transformers, transformers-fix
  -- hs-source-dirs:
  default-language:    Haskell2010
